# FloorLayoutPlanner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  APPLY_NOTES.txt  Dockerfile.backend  README.md  README.txt  alembic.ini  compose.yaml  laminate_planner.py  pyproject.toml  requirements-dev.txt  requirements.txt  stue_layout.json  stue_project.json
deploy/: nginx.conf
examples/: continuous_double.json  continuous_horizontal.json  continuous_vertical.json  example_layout.json  example_project.json  four_rooms.json  l_shape_single_room.json  threshold.json
floor_layout_planner/: board_allocator.py  candidate_evaluator.py  cli.py  connection_scorer.py  connections.py  continuous_solver.py  geometry.py  gui.py  material.py  models.py  planner.py  renderer.py  scorer.py  validation.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
migrations/: env.py
pergo_planner/: __init__.py  board_allocator.py  candidate_evaluator.py  connection_scorer.py  connections.py  continuous_solver.py  geometry.py  gui.py  layout_solver.py  material.py  models.py  optimizer.py  passage_preview.py  planner.py  renderer.py  scorer.py  validation.py
static/: app.js  style.css
templates/: index.html
tests/: conftest.py  test_board_allocator.py  test_board_allocator_segments.py  test_connection_scorer.py  test_connections.py  test_continuous_preview.py  test_continuous_solver.py  test_continuous_split.py  test_examples.py  test_geometry.py  test_material.py  test_optimizer.py  test_package_compatibility.py  (+14 more)
(+67 files in other folders)
